# dspy-compounding-engineering

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  PYREFLY_ERRORS_BREAKDOWN.md  README.md  calculator.py  calculator_mcp.py  cli.py  config.py  debug_collection_state.py  docker-compose.yml  mkdocs.yml  nuke.py  pyproject.toml  pyrefly.toml  pyrightconfig.json  pytest.ini  requirements.txt  test_tools.py
.claude/knowledge/: 20260101235812723554-91536729-test.json  20260101235826464550-444af5cc-test.json  AI.md
.compounding/: .gitignore  REDIS.md  SERVER.md
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: branch-enforcement.yml  docs.yml  release-tagging.yml  test.yml
.knowledge/: 20251130124743-automation.json  AI.md
agents/: knowledge_gardener.py
agents/graphrag/: __init__.py  architecture_mapper.py  code_navigator.py  dependency_tracer.py  impact_analyzer.py  multi_hop_searcher.py  schema.py
agents/graphrag/extractors/: __init__.py  function_io_extractor.py  interaction_tracer.py  orchestrator.py  temporal_extractor.py
agents/graphrag/schemas/: __init__.py  entity_schemas.py  relationship_schemas.py  report_schemas.py
agents/knowledge_gardener/: __init__.py  commit_indexer.py  kb_consolidator.py  memory_compressor.py  orchestrator.py  pattern_extractor.py  schema.py
agents/research/: __init__.py  best_practices_researcher.py  framework_docs_researcher.py  git_history_analyzer.py  repo_research_analyst.py  schema.py
agents/review/: __init__.py  agent_native_reviewer.py  architecture_strategist.py  code_simplicity_reviewer.py  data_integrity_guardian.py  dhh_rails_reviewer.py  julik_frontend_races_reviewer.py  kieran_python_reviewer.py  kieran_rails_reviewer.py  kieran_typescript_reviewer.py  pattern_recognition_specialist.py  performance_oracle.py  schema.py  security_sentinel.py
agents/workflow/: __init__.py  command_generator.py  every_style_editor.py  every_style_editor_module.py  feedback_codifier.py  plan_generator.py  pr_comment_resolver.py  react_todo_resolver.py  spec_flow_analyzer.py  task_executor.py  task_validator.py  todo_resolver.py  triage_agent.py  work_agent.py  work_plan_executor.py  work_todo_executor.py
agents/workflow/schema/: __init__.py  style_edit_models.py
agents/workflow/signatures/: __init__.py  chunk_style_editor.py  content_analyzer.py  edit_aggregator.py
docs/: contributing.md  index.md  roadmap.md
docs/api/: agents.md  utilities.md  workflows.md
docs/concepts/: compounding-engineering.md  knowledge-base.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guides/: context.md
docs/mcp/: initialization.md
docs/technologies/: celery.md  dspy-qdrant.md  dspy.md  fastapi.md  fastmcp.md  qdrant.md
docs/usage/: codify.md  planning.md  review.md  triage.md  work.md
scripts/: check-types.sh
server/: QWEN.md  README.md  main.py
server/api/: __init__.py  api_router.py  history.py  policy.py  usage.py
server/api/v1/: __init__.py  (+13 more)
server/config/: __init__.py  env_loader.py  lm_provider.py  logging.py  project.py  service_registry.py  settings.py
server/contracts/: policy_response.py  task_status.py  usage_report.py
server/mcp/: __main__.py  sampling_handler.py  schemas.py  server.py  tools.py
server/models/: __init__.py
tests/: TEST_RESULTS.md  conftest.py  manual_verify_pii.py  manual_verify_security.py  mock_modules.py  test_api_endpoints.py  test_application_services.py  test_batch_benchmark.py  test_celery_integration.py  test_celery_tasks.py  test_cli.py  test_config.py  test_configurable_base_directory.py  test_cross_repo_execution.py  test_data_integrity.py  test_file_tools.py  test_git_service.py  test_indexer_unit.py  test_io_safe.py  test_knowledge_base.py  test_logger.py  test_mcp_autonomous.py  test_mcp_http.py  test_mcp_live.py  test_mcp_manual.py  test_mcp_tools.py  test_mcp_tools_basic.py  test_multiformat_chunking.py  test_policy_enforcement.py  test_project_context.py  test_redis_pubsub.py  test_registry.py  test_repo_executor.py  test_scorer.py  test_scrubber_unit.py  test_semantic_simple.py  test_server_config.py  test_server_integration.py  test_status.py  test_token_service.py  (+1 more)
tests/unit/: test_search_providers.py
utils/: embeddings.py  file_tools.py  git_service.py  kb_compression.py  kb_module.py  knowledge_base.py  knowledge_docs.py  learning_extractor.py  paths.py  project_context.py  safe_io.py  todo_service.py
utils/agent/: graphrag_tools.py  tools.py
utils/context/: project.py  scorer.py  scrubber.py
utils/git/: service.py
utils/io/: __init__.py  files.py  logger.py  safe.py  status.py
utils/knowledge/: __init__.py  async_indexer.py  batch_embedder.py  chunking_metrics.py  chunking_strategies.py  collection_metadata.py  compression.py  core.py  core.py.backup  docs.py  embeddings.py  embeddings_dspy.py  entity_extractor.py  extractor.py  file_indexer.py  gitignore_parser.py  graph_rag.py  graph_store.py  graphrag_indexer.py  graphrag_indexer.py.backup  graphrag_sequential.py  graphrag_timing.py  indexer.py  indexer.py.backup  indexer_metadata.py  json_extractor.py  learning_indexer.py  learning_persistence.py  learning_retrieval.py  module.py  semantic_chunker.py  semantic_extractor.py  time_estimator.py  utils.py  warmup.py
utils/memory/: __init__.py  agent_memory.py  config.py  gardener.py  maintainer.py  module.py
utils/policy/: __init__.py  cache.py  config.py  orchestrator.py  signature.py  state.py  violations.py
utils/search/: __init__.py  orchestrator.py  query_analyzer.py  query_formatter.py  reranker.py
utils/security/: scrubber.py
utils/text/: __init__.py  chunker.py
utils/todo/: analyzer.py  creator.py  file_utils.py  parser.py  query.py  service.py  updater.py
utils/token/: __init__.py  counter.py
utils/web/: documentation.py
workflows/: analyze.py  check.py  codify.py  garden.py  generate_command.py  plan.py  resolve_todo.py  review.py  triage.py  work.py  work_unified.py
(+149 files in other folders)
